# RecursiveGPU

./: .gitmodules  CMakeLists.txt  README.md
BenchmarkResults/: localIntensityScaleCpuVsGpu.eps  recursiveCpuVsGpu.eps  recursiveWithK0changesCpuVsGpu.eps
BenchmarkResults/1080ti/: BenchmarkBsplineTest.h5  BenchmarkBsplineVsK0sizeTest.h5  BenchmarkLocalIntensityScaleTestOffset2.h5  BenchmarkLocalIntensityScaleTestOffset6.h5
BenchmarkResults/1080ti2/: BenchmarkBsplineTest.h5  BenchmarkBsplineVsK0sizeTest.h5  BenchmarkLocalIntensityScaleTestOffset2.h5  BenchmarkLocalIntensityScaleTestOffset6.h5  output1080ti.txt
BenchmarkResults/Furiosa/: BenchmarkBsplineTest.h5  BenchmarkLocalIntensityScaleTestOffset2.h5  BenchmarkLocalIntensityScaleTestOffset6.h5  READ.me  testOutput.txt
BenchmarkResults/Particulator/: BenchmarkBsplineTest.h5  BenchmarkLocalIntensityScaleTestOffset6.h5
BenchmarkResults/ParticulatorOpenMP/: BenchmarkBsplineTest.h5  BenchmarkBsplineVsK0sizeTest.h5  BenchmarkBsplineVsK0sizeTest8GB.h5  BenchmarkLocalIntensityScaleTestOffset2.h5  BenchmarkLocalIntensityScaleTestOffset6.h5  READ.me  testOutput.txt  testOutput8GBchangeK0.txt
BenchmarkResults/ParticulatorSingleCPU/: BenchmarkBsplineTest.h5  BenchmarkLocalIntensityScaleTestOffset2.h5  BenchmarkLocalIntensityScaleTestOffset6.h5  READ.me  testOutput.txt
BenchmarkResults/p100/: BenchmarkBsplineTest.h5  BenchmarkLocalIntensityScaleTestOffset2.h5  BenchmarkLocalIntensityScaleTestOffset6.h5  testOutput.txt
BenchmarkResults/v100/: BenchmarkBsplineTest.h5  BenchmarkLocalIntensityScaleTestOffset2.h5  BenchmarkLocalIntensityScaleTestOffset6.h5  testOutput.txt
Paper/Main/: bib_file.bib  maintext.blg  maintext.tex
src/: Conv.cu  Conv.h  ConvTest.cpp  RecursiveBenchmark.m  deviceQuery.cuh  format_figure.m  localIntensityScaleCpuVsGpu.eps  main.cpp  memBenchmarks.cpp  memBenchmarks.cu  memBenchmarks.h  memTest.cu  recursiveCpuVsGpu.eps  recursiveFilter.cu  recursiveFilter.h
